# relion-pipeline-visualizer

./: .gitignore  README.md  environment.yml  pyproject.toml
src/relion_pipeline_visualizer/: __init__.py  __main__.py  cli.py  graph.py  mermaid.py  parser.py
tests/: test_pipeline.py
tests/data/: default_pipeline.star  small_pipeline.star
tests/data/small_project/Class3D/job006/: note.txt  run_it025_model.star
tests/data/small_project/Import/job001/: note.txt
tests/data/small_project/Refine3D/job004/: note.txt  run_model.star
