[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "relion-pipeline-visualizer"
version = "0.1.0"
description = "Visualize RELION cryo-EM pipelines as Mermaid diagrams"
requires-python = ">=3.10"
license = "GPL-3.0-only"
authors = [
    {name = "Sean Connell", email = "sean.connell@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dependencies = ["starfile"]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
relion_pipeline_visualizer = "relion_pipeline_visualizer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
